--- a/src/libcore/core.rc
+++ b/src/libcore/core.rc
@@ -56,6 +56,7 @@ export cmp;
 export num;
 export path, path2;
 export managed;
+export flate;
 
 // NDM seems to be necessary for resolve to work
 export option_iter;
@@ -263,6 +264,8 @@ mod sys;
 mod unsafe;
 
 mod managed;
+
+mod flate;
 
 // Modules supporting compiler-generated code
 // Exported but not part of the public interface
